# sip_examples

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/: perf-transition-problems.txt
.github/workflows/: bratu1d-factorization-debug.yml  ci.yml  dymos-debug.yml  (+36 more)
problem_definitions/: BUILD.bazel  unit_residual_scaling.cpp  unit_residual_scaling.hpp
problem_definitions/casadi_problems/: BUILD.bazel  codegen_common.py  problem.bzl  quadpendulum_problem.py  solver_tests.bzl
problem_definitions/casadi_problems/acrobot/: codegen.py
problem_definitions/casadi_problems/bryson_denham/: codegen.py
problem_definitions/casadi_problems/cartpole/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/common/: BUILD.bazel  flat_ipopt_main.cpp  flat_ipopt_model.cpp  flat_ipopt_model.hpp  flat_model_signature_main.cpp  flat_qdldl_runner.hpp  flat_qdldl_test.cpp  flat_slacg_runner.hpp  flat_slacg_test.cpp  ipopt_runner.py  model_signature.cpp  model_signature.hpp  model_signature_test.py  ocp_model_signature_main.cpp  ocp_problem.hpp  ocp_runner.cpp  ocp_runner.hpp  ocp_test.cpp  problem.cpp  problem.hpp
problem_definitions/casadi_problems/dymos/: BUILD.bazel  README.md  atmosphere_1976.py  atmosphere_1976_data.py  commercial_aircraft_data.py  common.py  min_time_climb_data.py  problem.bzl  problems.bzl
problem_definitions/casadi_problems/dymos/balanced_field/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/ballistic_spacecraft/: codegen.py
problem_definitions/casadi_problems/dymos/battery_multibranch/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/brachistochrone/: codegen.py
problem_definitions/casadi_problems/dymos/brachistochrone_tandem_phases/: codegen.py
problem_definitions/casadi_problems/dymos/breakwell/: codegen.py
problem_definitions/casadi_problems/dymos/bryson_denham/: codegen.py
problem_definitions/casadi_problems/dymos/cannonball_implicit_duration/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/cart_pole/: codegen.py
problem_definitions/casadi_problems/dymos/commercial_aircraft/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/double_integrator/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/finite_burn_orbit_raise/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/flying_robot/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/goddard_rocket/: codegen.py
problem_definitions/casadi_problems/dymos/hull/: codegen.py
problem_definitions/casadi_problems/dymos/hypersensitive/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/length_constrained_brachistochrone/: codegen.py
problem_definitions/casadi_problems/dymos/low_thrust_spiral/: codegen.py
problem_definitions/casadi_problems/dymos/min_time_climb/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/moon_landing/: codegen.py
problem_definitions/casadi_problems/dymos/mountain_car/: codegen.py
problem_definitions/casadi_problems/dymos/multi_phase_cannonball/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/racecar/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/robot_arm/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/shuttle_reentry_constrained/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/shuttle_reentry_unconstrained/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/ssto_earth/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/ssto_linear_tangent/: codegen.py
problem_definitions/casadi_problems/dymos/vanderpol/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/water_rocket_height/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/dymos/water_rocket_range/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/quadpendulum/: codegen.py
problem_definitions/casadi_problems/quadpendulum_theta/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/trajax_l4dc/: BUILD.bazel  quadpendulum_problem.py
problem_definitions/casadi_problems/trajax_l4dc/acrobot/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/trajax_l4dc/cartpole/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/trajax_l4dc/quadpendulum/: BUILD.bazel  codegen.py
problem_definitions/casadi_problems/trajax_l4dc/quadpendulum_theta/: BUILD.bazel  codegen.py
problem_definitions/cutest_problems/: BUILD.bazel  README.md  classification.bzl  cutest_problem.cpp  cutest_problem.hpp  ipopt_runner.cpp  ipopt_runner.py  piqp_runner.cpp  qp_scaling.cpp  qp_scaling.hpp  runner.cpp  scaled_qp_model.cpp  scaled_qp_model.hpp
problem_definitions/ipopt/: BUILD.bazel  ipopt.cpp  ipopt.hpp
problem_definitions/mock_problems/simple_constrained_lqr/: BUILD.bazel  problem.cpp  problem.hpp
problem_definitions/simple_branched_lqr/: BUILD.bazel  codegen.py  problem.cpp  problem.hpp
problem_definitions/simple_qp/: BUILD.bazel  codegen.py  problem.cpp  problem.hpp
sip-optimal-control/cross_stage_variable_lqr/: BUILD  BUILD.bazel  test.cpp
sip-optimal-control/dymos/: BUILD.bazel
sip-optimal-control/mock_problems/simple_branched_lqr/: BUILD.bazel  test.cpp
sip-optimal-control/quadpendulum_theta/: BUILD.bazel
sip-optimal-control/simple_constrained_lqr/: BUILD  BUILD.bazel  test.cpp
sip-qdldl/acrobot/: BUILD.bazel
sip-qdldl/cartpole/: BUILD.bazel
sip-qdldl/casadi_problems/dymos/: BUILD.bazel
sip-qdldl/dymos/: BUILD.bazel
sip-qdldl/mock_problems/simple_branched_lqr/: BUILD.bazel  test.cpp
sip-qdldl/mock_problems/simple_qp/: BUILD.bazel  test.cpp
sip-qdldl/quadpendulum/: BUILD.bazel
sip-qdldl/simple_branched_lqr/: BUILD.bazel  test.cpp
sip-slacg/acrobot/: BUILD.bazel
sip-slacg/cartpole/: BUILD.bazel
sip-slacg/casadi_problems/dymos/: BUILD.bazel
sip-slacg/mock_problems/simple_branched_lqr/: BUILD.bazel  test.cpp
sip-slacg/mock_problems/simple_nlp/: BUILD.bazel  test.cpp
sip-slacg/simple_branched_lqr/: BUILD.bazel  test.cpp
(+89 files in other folders)
