# Set up Python and pip.

bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(python_version = "3.12", is_default = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "sip_examples_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.lock",
)

use_repo(pip, "sip_examples_pip")

# CUTEst
cutest = use_extension("//tools/cutest:repositories.bzl", "cutest_repositories")
use_repo(cutest, "cutest_sif", "cutest_tools", "maros_meszaros")

# rules_cc
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# Hermetic C++ Toolchain (Zig CC)
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)

# SIP
# https://github.com/joaospinto/sip
bazel_dep(name = "sip", dev_dependency = True)
git_override(
    module_name = "sip",
    remote = "https://github.com/joaospinto/sip.git",
    commit = "eddc1d9a674cfd525be13f964172a42285627105",
)

# SLACG
# https://github.com/joaospinto/slacg
bazel_dep(name = "slacg", dev_dependency = True)
git_override(
    module_name = "slacg",
    remote = "https://github.com/joaospinto/slacg.git",
    commit = "945890071497a35697803658ac8bd26ed2d7bd06",
)

# SIP_QDLDL
# https://github.com/joaospinto/sip_qdldl
bazel_dep(name = "sip_qdldl", dev_dependency = True)
git_override(
    module_name = "sip_qdldl",
    remote = "https://github.com/joaospinto/sip_qdldl.git",
    commit = "01c0fd7af622d1c099bd7efb72d2c40715bc92a5",
)

# eigen
bazel_dep(name = "eigen", version = "3.4.0.bcr.3", dev_dependency = True)

# A sparse quasi-definite linear system solver (via L D L^T).
# https://github.com/osqp/qdldl
bazel_dep(name = "qdldl", version = "0.1.7", dev_dependency = True)

# SIP Optimal Control
bazel_dep(name = "sip_optimal_control", dev_dependency = True)
git_override(
    module_name = "sip_optimal_control",
    remote = "https://github.com/joaospinto/sip_optimal_control.git",
    commit = "1288dc1de7ea8fa06dd54a6f4c9c81dffc395ed4",
)

# Google Test
# https://github.com/google/googletest
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
