# Set up Python and pip.

bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(python_version = "3.12", is_default = True)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "sip_examples_pip",
    python_version = "3.12",
    requirements_lock = "//:requirements.lock",
)

use_repo(pip, "sip_examples_pip")

# CUTEst
cutest = use_extension("//tools/cutest:repositories.bzl", "cutest_repositories")
use_repo(cutest, "cutest_sif", "cutest_tools", "maros_meszaros")

# rules_cc
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.0.0")

# Hermetic C++ Toolchain (Zig CC)
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)

# SIP
# https://github.com/joaospinto/sip
bazel_dep(name = "sip", dev_dependency = True)
git_override(
    module_name = "sip",
    remote = "https://github.com/joaospinto/sip.git",
    commit = "f221e8e63d0809fe4f66eebfe67610d6b3669850",
)

# SIP QP
bazel_dep(name = "sip_qp", dev_dependency = True)
git_override(
    module_name = "sip_qp",
    remote = "https://github.com/joaospinto/sip_qp.git",
    commit = "10f9c79ae116d2e99cc9487528de0ecd8839b7d1",
)

# SLACG
# https://github.com/joaospinto/slacg
bazel_dep(name = "slacg", dev_dependency = True)
git_override(
    module_name = "slacg",
    remote = "https://github.com/joaospinto/slacg.git",
    commit = "a45722e404b06d69133114ae89e481b19d6f6115",
)

# SIP_QDLDL
# https://github.com/joaospinto/sip_qdldl
bazel_dep(name = "sip_qdldl", dev_dependency = True)
git_override(
    module_name = "sip_qdldl",
    remote = "https://github.com/joaospinto/sip_qdldl.git",
    commit = "ee2beb662b8f1711dc2edc0323d74bc2eed0547a",
)

# eigen
bazel_dep(name = "eigen", version = "3.4.0.bcr.3", dev_dependency = True)

# A sparse quasi-definite linear system solver (via L D L^T).
# https://github.com/osqp/qdldl
bazel_dep(name = "qdldl", version = "0.1.7", dev_dependency = True)

# SIP Optimal Control
bazel_dep(name = "sip_optimal_control", dev_dependency = True)
git_override(
    module_name = "sip_optimal_control",
    remote = "https://github.com/joaospinto/sip_optimal_control.git",
    commit = "1445600083a05c571d21b5155a095c2cb50f2c90",
)

# Google Test
# https://github.com/google/googletest
bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)
