load("@rules_python//python:defs.bzl", "py_library")
load("@sip_examples_pip//:requirements.bzl", "requirement")

py_library(
    name = "codegen_common",
    srcs = ["codegen_common.py"],
    deps = [
        requirement("casadi"),
        requirement("numpy"),
        requirement("scipy"),
    ],
    visibility = ["//visibility:public"],
)
