load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_python//python:defs.bzl", "py_binary")
load("@sip_examples_pip//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

exports_files(["classification.bzl"])

cc_library(
    name = "cutest_problem",
    srcs = ["cutest_problem.cpp"],
    hdrs = ["cutest_problem.hpp"],
    deps = [
        "@cutest_tools//:headers",
        "@eigen//:eigen",
        "@qdldl//:qdldl",
        "@sip_qdldl//sip_qdldl",
    ],
    linkopts = select({
        "@platforms//os:linux": ["-ldl"],
        "//conditions:default": [],
    }),
    tags = ["manual"],
)

cc_binary(
    name = "runner",
    srcs = ["runner.cpp"],
    deps = [
        ":cutest_problem",
        "//problem_definitions/casadi_problems/common",
        "@sip//sip",
        "@sip_qdldl//sip_qdldl",
    ],
    tags = ["manual"],
)

cc_binary(
    name = "piqp_runner",
    srcs = ["piqp_runner.cpp"],
    deps = [
        ":cutest_problem",
        "@eigen//:eigen",
        "@piqp//:piqp",
    ],
    tags = ["manual"],
)

cc_binary(
    name = "ipopt_native_runner",
    srcs = ["ipopt_runner.cpp"],
    deps = [
        ":cutest_problem",
        "//problem_definitions/ipopt",
    ],
    tags = ["manual"],
)

py_binary(
    name = "ipopt_runner",
    srcs = ["ipopt_runner.py"],
    data = [":ipopt_native_runner"],
    deps = [
        "@rules_python//python/runfiles",
        requirement("casadi"),
    ],
    tags = ["manual"],
)
