load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(["classification.bzl"])

cc_library(
    name = "cutest_problem",
    srcs = ["cutest_problem.cpp"],
    hdrs = ["cutest_problem.hpp"],
    deps = [
        "@cutest_tools//:headers",
        "@eigen//:eigen",
        "@qdldl//:qdldl",
        "@sip_qdldl//sip_qdldl",
    ],
    linkopts = select({
        "@platforms//os:linux": ["-ldl"],
        "//conditions:default": [],
    }),
    tags = ["manual"],
)

cc_library(
    name = "scaled_qp_model",
    srcs = ["scaled_qp_model.cpp"],
    hdrs = ["scaled_qp_model.hpp"],
    deps = ["@sip_qdldl//sip_qdldl"],
)

cc_binary(
    name = "runner",
    srcs = ["runner.cpp"],
    deps = [
        ":cutest_problem",
        ":scaled_qp_model",
        "//problem_definitions/casadi_problems/common",
        "@sip//sip",
        "@sip_qdldl//sip_qdldl",
    ],
    tags = ["manual"],
)
