load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

package(default_visibility = ["//visibility:public"])

exports_files(["classification.bzl"])

cc_library(
    name = "cutest_problem",
    srcs = ["cutest_problem.cpp"],
    hdrs = ["cutest_problem.hpp"],
    deps = [
        "@cutest_tools//:headers",
        "@eigen//:eigen",
        "@qdldl//:qdldl",
        "@sip_qdldl//sip_qdldl",
    ],
    linkopts = select({
        "@platforms//os:linux": ["-ldl"],
        "//conditions:default": [],
    }),
    tags = ["manual"],
)

cc_library(
    name = "qp_scaling",
    srcs = ["qp_scaling.cpp"],
    hdrs = ["qp_scaling.hpp"],
    deps = ["@sip_qdldl//sip_qdldl"],
    tags = ["manual"],
)

cc_binary(
    name = "runner",
    srcs = ["runner.cpp"],
    deps = [
        ":cutest_problem",
        ":qp_scaling",
        "//problem_definitions/casadi_problems/common",
        "@sip//sip",
        "@sip_qdldl//sip_qdldl",
    ],
    tags = ["manual"],
)
