load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "cross_stage_variable_lqr",
    size = "small",
    srcs = ["test.cpp"],
    deps = [
        "//problem_definitions/cross_stage_variable_lqr",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@sip//sip",
        "@sip_optimal_control//sip_optimal_control",
    ],
)
