load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "quadpendulum_theta",
    size = "large",
    srcs = ["//problem_definitions/casadi_problems/common:ocp_test.cpp"],
    copts = ["-DGENERATED_HEADER=\\\"problem_definitions/casadi_problems/quadpendulum_theta/generated_ocp.hpp\\\""],
    deps = [
        "//problem_definitions/casadi_problems/quadpendulum_theta:ocp_generated_problem",
        "//problem_definitions/casadi_problems/common",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@sip//sip",
        "@sip_optimal_control//sip_optimal_control",
    ],
)
