load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "simple_constrained_lqr",
    size = "small",
    srcs = ["test.cpp"],
    deps = [
        "//problem_definitions/simple_constrained_lqr",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@sip//sip",
        "@sip_optimal_control//sip_optimal_control",
    ],
)
