load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "acrobot",
    size = "medium",
    srcs = ["//problem_definitions/casadi_problems/common:flat_qdldl_test.cpp"],
    copts = ["-DGENERATED_HEADER=\\\"problem_definitions/casadi_problems/acrobot/generated_flat.hpp\\\""],
    deps = [
        "//problem_definitions/casadi_problems/acrobot:flat_generated_problem",
        "//problem_definitions/casadi_problems/common",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@qdldl//:qdldl",
        "@sip//sip",
        "@sip_qdldl//sip_qdldl",
    ],
)
