load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "simple_branched_lqr",
    size = "small",
    srcs = ["test.cpp"],
    deps = [
        "//problem_definitions/simple_branched_lqr",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@qdldl//:qdldl",
        "@sip//sip",
        "@sip_qdldl//sip_qdldl",
    ],
)
