load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "acrobot",
    size = "medium",
    srcs = ["//problem_definitions/casadi_problems/common:flat_slacg_test.cpp"],
    copts = [
        "-DGENERATED_HEADER=\\\"problem_definitions/casadi_problems/acrobot/generated_flat.hpp\\\"",
        "-DGENERATED_KKT_HEADER=\\\"problem_definitions/casadi_problems/acrobot/kkt_codegen.hpp\\\"",
    ],
    deps = [
        "//problem_definitions/casadi_problems/acrobot:flat_generated_problem",
        "//problem_definitions/casadi_problems/acrobot:kkt_codegen",
        "//problem_definitions/casadi_problems/common:flat_slacg_common",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@sip//sip",
    ],
)
