load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files([
    "flat_qdldl_test.cpp",
    "flat_slacg_test.cpp",
    "ocp_test.cpp",
], visibility = ["//visibility:public"])

cc_library(
    name = "common",
    hdrs = [
        "flat_qdldl_runner.hpp",
        "flat_slacg_runner.hpp",
        "ocp_runner.hpp",
        "problem.hpp",
    ],
    deps = [
        "//sip-slacg/helpers",
        "@sip//sip",
        "@sip_optimal_control//sip_optimal_control",
        "@sip_qdldl//sip_qdldl",
    ],
    visibility = ["//visibility:public"],
)
