load("@rules_cc//cc:defs.bzl", "cc_library")
exports_files([
    "flat_qdldl_test.cpp",
    "flat_ipopt_main.cpp",
    "flat_model_signature_main.cpp",
    "flat_slacg_test.cpp",
    "ipopt_runner.py",
    "model_signature_test.py",
    "ocp_model_signature_main.cpp",
    "ocp_test.cpp",
], visibility = ["//visibility:public"])

cc_library(
    name = "model_signature",
    srcs = ["model_signature.cpp"],
    hdrs = ["model_signature.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "common",
    srcs = ["problem.cpp"],
    hdrs = [
        "ocp_problem.hpp",
        "problem.hpp",
    ],
    deps = [
        "@sip//sip",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "flat_qdldl_common",
    hdrs = [
        "flat_qdldl_runner.hpp",
    ],
    deps = [
        ":common",
        "@sip//sip",
        "@sip_qdldl//sip_qdldl",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "flat_ipopt_model",
    srcs = ["flat_ipopt_model.cpp"],
    hdrs = ["flat_ipopt_model.hpp"],
    deps = [
        ":common",
        "//problem_definitions/ipopt",
        "@sip_qdldl//sip_qdldl",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "flat_slacg_common",
    hdrs = [
        "flat_slacg_runner.hpp",
    ],
    deps = [
        ":common",
        "//sip-slacg/helpers",
        "@sip//sip",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ocp_common",
    srcs = ["ocp_runner.cpp"],
    hdrs = [
        "ocp_problem.hpp",
        "ocp_runner.hpp",
    ],
    deps = [
        ":common",
        "@sip//sip",
        "@sip_optimal_control//sip_optimal_control",
    ],
    visibility = ["//visibility:public"],
)
