load("@rules_cc//cc:defs.bzl", "cc_library")

exports_files([
    "flat_qdldl_test.cpp",
    "flat_slacg_test.cpp",
    "ocp_test.cpp",
], visibility = ["//visibility:public"])

cc_library(
    name = "common",
    srcs = ["problem.cpp"],
    hdrs = [
        "ocp_problem.hpp",
        "problem.hpp",
    ],
    deps = [
        "@sip//sip",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "flat_qdldl_common",
    hdrs = [
        "flat_qdldl_runner.hpp",
    ],
    deps = [
        ":common",
        "//problem_definitions:unit_residual_scaling",
        "@sip//sip",
        "@sip_qdldl//sip_qdldl",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "flat_slacg_common",
    hdrs = [
        "flat_slacg_runner.hpp",
    ],
    deps = [
        ":common",
        "//problem_definitions:unit_residual_scaling",
        "//sip-slacg/helpers",
        "@sip//sip",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "ocp_common",
    hdrs = [
        "ocp_problem.hpp",
        "ocp_runner.hpp",
    ],
    deps = [
        ":common",
        "//problem_definitions:unit_residual_scaling",
        "@sip//sip",
        "@sip_optimal_control//sip_optimal_control",
    ],
    visibility = ["//visibility:public"],
)
