load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "simple_constrained_lqr",
    srcs = ["problem.cpp"],
    hdrs = ["problem.hpp"],
    deps = [
        "//problem_definitions:unit_residual_scaling",
        "@sip//sip",
        "@sip_optimal_control//sip_optimal_control",
    ],
    visibility = ["//visibility:public"],
)
