load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@slacg//:kkt_codegen.bzl", "kkt_codegen_files", "kkt_codegen_sources")

genrule(
    name = "codegen_genrule",
    outs = kkt_codegen_files("kkt_codegen"),
    cmd = "$(location //problem_definitions/mock_problems/simple_branched_lqr:codegen) $(RULEDIR)",
    tools = ["//problem_definitions/mock_problems/simple_branched_lqr:codegen"],
)

cc_library(
    name = "codegen_output",
    srcs = kkt_codegen_sources("kkt_codegen"),
    hdrs = ["kkt_codegen.hpp"],
)

cc_test(
    name = "simple_branched_lqr",
    size = "small",
    srcs = ["test.cpp"],
    deps = [
        ":codegen_output",
        "//problem_definitions:unit_residual_scaling",
        "//problem_definitions/mock_problems/simple_branched_lqr",
        "//sip-slacg/helpers",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@sip//sip",
    ],
)
